package com.example.simulateur.vues;

import com.example.simulateur.modeles.Sujet;

public interface Observateur {
    public void update(Sujet s);
}
